me.jpg and index.html files

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <body style="background-color: #A3CFF1;">
 
 <h1 style="font-size: 45px;">Charlotte D'Orsi</h1>
-<p><img src="me.jpg" width="200" height="300"></p>
+<p><img src="ME.JPG" width="289" height="386"></p>
 
 <p>I was born on May 29th, 2002 in Syracuse, NY.
 <br> I speak fluent French and Italian.
